--- a/src/app/books-details/books-details.component.html
+++ b/src/app/books-details/books-details.component.html
@@ -1,10 +1,12 @@
 <div *ngIf="book">
-
-    <h2>{{book.title | uppercase}} Details</h2>
-    <div><span>Author: </span>{{book.author}}</div>
-    <div>
-      <label>title:
-        <input [(ngModel)]="book.title" placeholder="name"/>
-      </label>
-    </div>  
+  <h2>{{ book.title | uppercase }} Details</h2>
+  <div><span>Author: </span>{{ book.author }}</div>
+  <div>
+    <label
+      >title:
+      <input [(ngModel)]="book.title" placeholder="name" />
+    </label>
   </div>
+  <button (click)="goBack()">go back</button>
+  <button (click)="save()">save</button>
+</div>
