--- a/src/app/books-page/books-page.component.less
+++ b/src/app/books-page/books-page.component.less
@@ -1,10 +1,20 @@
-.list {
+.container{
+  .grid{
+    display: flex;
+  }
+  .col{
+    flex-basis: 30%;
+    margin-left: 2%;
+  }
+
+  .list {
+    height: 70vh;
+    overflow: scroll;
     margin: 0 0 2em 0;
     list-style-type: none;
     padding: 0;
-    width: 80%;
-     
-    & &__item {
+
+     &__item {
         cursor: pointer;
         position: relative;
         left: 0;
@@ -19,15 +29,15 @@
         left: .1em;
        }
        &-inner{
-           display: inline-block;
+          //  display: inline-block;
     font-size: small;
     color: white;
     padding: 0.8em 0.7em 0 0.7em;
     background-color: #607D8B;
     line-height: 1em;
-    position: relative;
-    left: -1px;
-    top: -4px;
+    // position: relative;
+    // left: -1px;
+    // top: -4px;
     height: 1.8em;
     margin-right: .8em;
     border-radius: 4px 0 0 4px;
@@ -37,14 +47,16 @@
             color: white;
           }
     }
-    
+
   }
+
   .selected {
     background-color: #CFD8DC !important;
     color: white;
-  }  
+  }
   .list .text {
     position: relative;
     top: -3px;
   }
-  
+}
+
