--- a/src/app/books-page/books-page.component.html
+++ b/src/app/books-page/books-page.component.html
@@ -9,7 +9,7 @@
           *ngFor="let book of books"
           (click)="onSelect(book)"
         >
-          <a routerLink="/detail/{{ book.id }}">
+          <a routerLink="/detail/{{ book?.id }}">
             {{ book.title }}
 
             <p class="list__item-inner">
