--- a/src/app/book-search/book-search.component.less
+++ b/src/app/book-search/book-search.component.less
@@ -1,7 +1,7 @@
 .p-search{
   text-align: center;
   position: relative;
-  border-bottom: 1px solid rgba(136, 136, 207,.7);
+  border-bottom: 1px solid rgba(125,156,178,.7);
   margin-bottom: 2rem;
   min-height: 100px;
 
@@ -9,7 +9,7 @@
     width: 20rem;
     border:none;
     outline: none;
-    border-bottom: 2px solid rgb(136, 136, 207);
+    border-bottom: 2px solid rgb(125,156,178);
     font-size: 1.5rem;
     padding: 5px 10px;
     &:focus{
@@ -35,7 +35,8 @@
       margin: 0.5rem;
     }
     &-link{
-      color: #fff;
+      color: #eee;
+      text-decoration: none;
     }
   }
 
