--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,7 +1,7 @@
 .p-header {
-  min-height: 130px;
   text-align: center;
 }
 .p-header .title {
-  font-size: 4rem;
+  font-size: 3rem;
+  margin-top: 1rem;
 }
