--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -1,9 +1,10 @@
 
 .p-header{
-  min-height: 130px;
+  // min-height: 130px;
   text-align: center;
 
   & .title{
-    font-size: 4rem;
+    font-size: 3rem;
+    margin-top: 1rem
   }
 }
