--- a/src/app/books-details/books-details.component.html
+++ b/src/app/books-details/books-details.component.html
@@ -1,12 +1,27 @@
-<div *ngIf="book">
-  <h2>{{ book.title | uppercase }} Details</h2>
-  <div><span>Author: </span>{{ book.author }}</div>
-  <div>
-    <label
-      >title:
+<main class="grid flex"  *ngIf="book">
+  <section class=" row">
+    <h2> Details</h2>
+  </section>
+  <section class=" row flex bg--light-gray">
+    <ul class="col list  ">
+      <li class="list__item  t--dark-gray"> Title</li>
+      <li class="list__item  t--dark-gray"> Book Author</li>
+      <li class="list__item  t--dark-gray"> Book Language </li>
+    </ul>
+    <ul class="col list bg--light-blue">
+      <li class=" list__item">{{ book.title }}</li>
+      <li class=" list__item">{{ book.author }}</li>
+      <li class=" list__item">{{ book.language }}</li>
+    </ul>
+  </section>
+  <section class=" row row--p flex flex--space-around bg--light-gray"> 
+    <button class="btn btn--back" (click)="goBack()">go back</button>
+    <button class="btn btn--save" (click)="save()">save</button>
+  </section>
+  <section class="row bg--light-gray">
+    <label>Chenge title:
       <input [(ngModel)]="book.title" placeholder="name" />
     </label>
-  </div>
-  <button (click)="goBack()">go back</button>
-  <button (click)="save()">save</button>
-</div>
+  </section>
+
+</main>
