--- a/src/app/books-page/books-page.component.less
+++ b/src/app/books-page/books-page.component.less
@@ -6,17 +6,22 @@
     width: 50%;
     margin: 0 auto;
 
-  .col{
+  .row{
     flex-basis: 50%;
-    &__header{
-      display: flex;
+   
+  }
+  .list__header{
+    display: flex;
+    list-style: none;
+    
+    margin: 0 ;
+    padding: 5%;
 
-      &-item{
-        flex-basis: 30%;
-
-      }
+    &-item{
+      flex-basis: 33%;
+      
+      
     }
-
   }
 
   .list {
@@ -25,50 +30,56 @@
     margin: 0 0 2em 0;
     list-style-type: none;
     padding: 0;
+    
 
      &__item {
-        cursor: pointer;
+        // cursor: pointer;
         position: relative;
         left: 0;
-        background-color: #EEE;
-        margin: .5em;
+        background-color: #607D8B;
+        margin: .5em 0;
         padding: .3em 0;
         // height: 1.6em;
         border-radius: 4px;
        &:hover{
-        color: #607D8B;
-        background-color: #DDD;
-        left: .1em;
+        
+        background-color: #7D9CB2;
+        // left: .1em;
        }
-       &-inner{
-          //  display: inline-block;
-    font-size: small;
-    color: white;
-    padding: 0.8em 0.7em 0 0.7em;
-    background-color: #607D8B;
-    line-height: 1em;
-    // position: relative;
-    // left: -1px;
-    // top: -4px;
-    height: 1.8em;
-    margin-right: .8em;
-    border-radius: 4px 0 0 4px;
-       }
-        &-inner.selected:hover {
-            background-color: #BBD8DC !important;
-            color: white;
-          }
+    }    
+  } 
+  .list-inner{
+    list-style: none;
+    display: flex;
+    padding: 5%;
+    &__item{
+      flex-basis: 33%;
     }
-
   }
 
-  .selected {
-    background-color: #CFD8DC !important;
-    color: white;
+  .link{
+    text-decoration: none;
+    color: #fff;
+
   }
-  .list .text {
-    position: relative;
-    top: -3px;
+  .btn{
+    padding: 5px 10px;
+    margin: 2% 5%;
+  }
+  
+  .btn--delete:hover{
+    background:#B28DA5;
+  }
+  
+  .btn--add:hover{
+    background:#8CB287;
+  }
+
+  .bg--light-gray{
+    background-color: #eee;
+  }
+  .t--dark-gray{
+    color: #607D8B;
   }
 }
 
