--- a/src/app/books-page/books-page.component.css
+++ b/src/app/books-page/books-page.component.css
@@ -1,18 +1,27 @@
-.container .grid {
+.grid {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 50%;
+  margin: 0 auto;
+}
+.grid .col {
+  flex-basis: 50%;
+}
+.grid .col__header {
   display: flex;
 }
-.container .col {
+.grid .col__header-item {
   flex-basis: 30%;
-  margin-left: 2%;
 }
-.container .list {
+.grid .list {
   height: 70vh;
   overflow: scroll;
   margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
 }
-.container .list__item {
+.grid .list__item {
   cursor: pointer;
   position: relative;
   left: 0;
@@ -21,12 +30,12 @@
   padding: .3em 0;
   border-radius: 4px;
 }
-.container .list__item:hover {
+.grid .list__item:hover {
   color: #607D8B;
   background-color: #DDD;
   left: .1em;
 }
-.container .list__item-inner {
+.grid .list__item-inner {
   font-size: small;
   color: white;
   padding: 0.8em 0.7em 0 0.7em;
@@ -36,15 +45,15 @@
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
 }
-.container .list__item-inner.selected:hover {
+.grid .list__item-inner.selected:hover {
   background-color: #BBD8DC !important;
   color: white;
 }
-.container .selected {
+.grid .selected {
   background-color: #CFD8DC !important;
   color: white;
 }
-.container .list .text {
+.grid .list .text {
   position: relative;
   top: -3px;
 }
