--- a/src/app/books-details/books-details.component.html
+++ b/src/app/books-details/books-details.component.html
@@ -8,20 +8,20 @@
       <li class="list__item  t--dark-gray"> Book Author</li>
       <li class="list__item  t--dark-gray"> Book Language </li>
     </ul>
-    <ul class="col list bg--light-blue">
+    <ul class="col list bg--light-gray">
       <li class=" list__item">{{ book.title }}</li>
       <li class=" list__item">{{ book.author }}</li>
       <li class=" list__item">{{ book.language }}</li>
     </ul>
   </section>
-  <section class=" row row--p flex flex--space-around bg--light-gray"> 
+  <section class=" row row--p flex flex--space-around bg--light-gray">
     <button class="btn btn--back" (click)="goBack()">go back</button>
-    <button class="btn btn--save" (click)="save()">save</button>
+    <!-- <button class="btn btn--save" (click)="save()">save</button> -->
   </section>
-  <section class="row bg--light-gray">
+  <!-- <section class="row bg--light-gray">
     <label>Chenge title:
       <input [(ngModel)]="book.title" placeholder="name" />
     </label>
-  </section>
+  </section> -->
 
 </main>
