--- a/src/app/add-book/add-book.component.html
+++ b/src/app/add-book/add-book.component.html
@@ -1,17 +1,19 @@
 <form [formGroup]="addForm" (ngSubmit)="onSubmit()">
-  <div class="form-group">
-    <label for="b_title">Book Title:</label>
-    <input type="text" formControlName="b_title" placeholder="Book Title" name="b_title" class="form-control" id="b_title">
+    <div class="form-group">
+    <label for="title">Book Title:</label>
+    <input type="text" formControlName="title" placeholder="Book Title" name="title" class="form-control"
+      id="b_title">
   </div>
 
   <div class="form-group">
-    <label for="b_author">Book Author:</label>
-    <input type="b_author" formControlName="b_author" placeholder="Book Author" name="b_author" class="form-control" id="b_author">
+    <label for="author">Book Author:</label>
+    <input type="author" formControlName="author" placeholder="Book Author" name="author" class="form-control"
+      id="b_author">
   </div>
 
   <div class="form-group">
-    <label for="b_lang">Book lang:</label>
-    <input formControlName="b_lang" placeholder="Book lang" name="b_lang" class="form-control" id="b_lang">
+    <label for="language">Book lang:</label>
+    <input formControlName="language" placeholder="Book lang" name="language" class="form-control" id="language">
   </div>
 
 
