--- a/src/app/book-search/book-search.component.less
+++ b/src/app/book-search/book-search.component.less
@@ -1,7 +1,7 @@
 .p-search{
   text-align: center;
   position: relative;
-  border-bottom: 1px solid rgba(125,156,178,.7);
+
   margin-bottom: 2rem;
   min-height: 100px;
 
@@ -13,7 +13,8 @@
     font-size: 1.5rem;
     padding: 5px 10px;
     &:focus{
-      border-color: rgb(96, 125, 139);;
+      border-color: rgb(96, 125, 139);
+      background-color: #fff;
     }
   }
 
@@ -28,7 +29,7 @@
     z-index: 2;
     background: rgba(96, 125, 139,.9);
     border-radius: 3px;
-    left: calc(50% - 5rem);
+
     &-item{
 
       font-size: 1.5rem;
