--- a/src/app/books-details/books-details.component.html
+++ b/src/app/books-details/books-details.component.html
@@ -9,13 +9,13 @@
       <li class="list__item  t--dark-gray"> Book Language </li>
     </ul>
     <ul class="col list bg--light-gray">
-      <li class=" list__item">{{ book.title }}</li>
-      <li class=" list__item">{{ book.author }}</li>
-      <li class=" list__item">{{ book.language }}</li>
+      <li class=" list__item t--light-brown">{{ book.title }}</li>
+      <li class=" list__item t--light-brown">{{ book.author }}</li>
+      <li class=" list__item t--light-brown">{{ book.language }}</li>
     </ul>
   </section>
   <section class=" row row--p flex flex--space-around bg--light-gray">
-    <button class="btn btn--back" (click)="goBack()">go back</button>
+    <button class="btn btn--red" (click)="goBack()">go back</button>
     <!-- <button class="btn btn--save" (click)="save()">save</button> -->
   </section>
   <!-- <section class="row bg--light-gray">
