--- a/src/app/add-book/add-book.component.html
+++ b/src/app/add-book/add-book.component.html
@@ -1,21 +1,36 @@
-<form [formGroup]="addForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-    <label for="title">Book Title:</label>
-    <input type="text" formControlName="title" placeholder="Book Title" name="title" class="form-control"
-      id="b_title">
+<form class="form bg--light-gray" [formGroup]="addForm" (ngSubmit)="onSubmit()">
+  <div class="row form-group">
+    <label class="label t--dark-gray" for="title">Book Title:</label>
+    <input
+    class="input form-control"
+    type="text"
+    formControlName="title"
+    placeholder="Book Title"
+    name="title"
+    id="b_title">
   </div>
 
-  <div class="form-group">
-    <label for="author">Book Author:</label>
-    <input type="author" formControlName="author" placeholder="Book Author" name="author" class="form-control"
-      id="b_author">
+  <div class="row form-group">
+    <label class="label t--dark-gray" for="author">Book Author:</label>
+    <input
+    class="input form-control"
+    type="author"
+    formControlName="author"
+    placeholder="Book Author"
+    name="author"
+    id="b_author">
   </div>
 
-  <div class="form-group">
-    <label for="language">Book lang:</label>
-    <input formControlName="language" placeholder="Book lang" name="language" class="form-control" id="language">
+  <div class="row form-group">
+    <label class="label t--dark-gray" for="language">Book lang:</label>
+    <input
+    class="input form-control"
+    formControlName="language"
+    placeholder="Book lang"
+    name="language"
+    id="language">
   </div>
 
-
-  <button class="btn btn-success">ADD</button>
+  <button class="btn btn--green">Add</button>
+  <button class="btn btn--red" (click)="goBack()">go back</button>
 </form>
