--- a/src/app/edit-book/edit-book.component.html
+++ b/src/app/edit-book/edit-book.component.html
@@ -1,36 +1,40 @@
-<section class="row">
-  <form [formGroup]="editForm" (ngSubmit)="onSubmit()" novalidate class="form">
-    <div class="form-group">
-      <label for="id">Book Id:</label>
-      <input type="number" formControlName="id" [(ngModel)]="book.id" placeholder="Id" name="bookId" class="form-control" id="id" readonly>
-    </div>
-
-    <div class="form-group">
-      <label for="bookName">Book Name:</label>
-      <input formControlName="title" placeholder="Book Name" name="bookName" class="form-control" id="bookName">
+<section class="">
+  <form class="form bg--light-gray" [formGroup]="editForm" (ngSubmit)="onSubmit()" novalidate >
+    <div class="row form-group">
+      <label class="label t--dark-gray" for="bookName">Book Name:</label>
+      <input class="input form-control" formControlName="title" placeholder="Book Name" name="bookName"  id="bookName">
       <div class="alert  alert-danger"
         *ngIf="editForm.get('title').hasError('required') && editForm.get('title').touched">
         Book Name is required
       </div>
     </div>
 
-    <div class="form-group">
-      <label for="bookAuthor">Book Author:</label>
-      <input formControlName="author" placeholder="Book Author" name="bookAuthor" class="form-control" id="bookAuthor">
+    <div class=" row form-group">
+      <label class="label t--dark-gray" for="bookAuthor">Book Author:</label>
+      <input class="input form-control" formControlName="author" placeholder="Book Author" name="bookAuthor"  id="bookAuthor">
       <div class="alert  alert-danger"
         *ngIf="editForm.get('author').hasError('required') && editForm.get('author').touched">
         Book Author is required and should less than 9 characters.
       </div>
     </div>
 
-    <div class="form-group">
-      <label for="bookLang">book Lang:</label>
-      <input formControlName="language" placeholder="Book Lang" name="bookLang" class="form-control" id="bookLang">
-      <div class="alert  alert-danger"
-        *ngIf=" editForm.get('language').hasError('required') && editForm.get('language').touched">
-        Lang is required and should less than 3 characters.
-      </div>
+    <div class="row form-group">
+    <label class="label t--dark-gray" for="bookLang">Book Lang:</label>
+    <input class="input form-control" formControlName="language" placeholder="Book Lang" name="bookLang"  id="bookLang">
+    <div class="alert  alert-danger"
+         *ngIf=" editForm.get('language').hasError('required') && editForm.get('language').touched">
+      Lang is required and should less than 3 characters.
     </div>
-    <button class="btn btn-success" [disabled]='editForm.invalid'>Save</button>
+    </div>
+    <div class=" row form-group">
+      <label class="label t--dark-gray" for="bookCountry">Book Country:</label>
+      <input class="input form-control" formControlName="country" placeholder="Book Country" name="bookCountry"  id="bookCountry">
+    </div>
+    <div class="row form-group">
+      <label class="label t--dark-gray" for="bookPages">Page Count:</label>
+      <input class="input form-control" formControlName="pages" placeholder="Page Count" name="bookPages"  id="bookPages">
+    </div>
+    <button class="btn btn--green" [disabled]='editForm.invalid'>Save</button>
+    <button class="btn btn--red" (click)="goBack()">go back</button>
   </form>
 </section>
