--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,7 +1,25 @@
 .p-header {
+  position: relative;
   text-align: center;
 }
 .p-header .title {
   font-size: 3rem;
   margin-top: 1rem;
+}
+.p-header .btn {
+  padding: 5px 10px;
+  margin: 2% 5%;
+}
+.p-header .btn--black {
+  position: absolute;
+  top: -15px;
+  right: 150px;
+  color: #fff;
+  background: #000;
+  border: 3px solid #000;
+  transition: all 0.5s;
+}
+.p-header .btn--black:hover {
+  color: #000;
+  background: #fff;
 }
