--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,4 @@
 <header class="p-header">
     <h1 class="title">Book`s list</h1>
+    <button class="btn btn--black"  (click)="logOut()">Logout</button>
 </header>
